--- a/be/package.json
+++ b/be/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+     "dev": "nodemon main.js",
+    "prod": "pm2-runtime start main.js -i --exp-backoff-restart-delay-100"
   },
   "keywords": [],
   "author": "",
