--- a/fe/package.json
+++ b/fe/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "bootstrapp": "^0.0.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
