--- a/fe/.env
+++ b/fe/.env
@@ -1,1 +1,4 @@
 REACT_APP_SERVER_BASE_URL=http://localhost:8070
+REACT_APP_SPOONACULAR_API_KEY=c57a9eebc7c64837b6fab3d8942b2c52
+#YOUR_APP_ID=AD5C08E3
+#YOUR_APP_KEY=46f5ff774c3c45127a8a2a3b526e55b0
