--- a/be/package.json
+++ b/be/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-     "dev": "nodemon main.js",
+    "dev": "nodemon main.js",
     "prod": "pm2-runtime start main.js -i --exp-backoff-restart-delay-100"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "be": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
