--- a/fe/package.json
+++ b/fe/package.json
@@ -13,6 +13,7 @@
     "bootstrapp": "^0.0.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "fe": "file:",
     "lucide-react": "^0.453.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
